# APi

./: .env.sample  .gitignore  APi.g4  APi.interp  APi.py  APi.tokens  APiBaseListener.java  APiLexer.interp  APiLexer.java  APiLexer.py  APiLexer.tokens  APiListener.java  APiListener.py  APiParser.java  APiParser.py  APishc.py  Dockerfile  JSON.g4  LICENSE  README.md  XMLLexer.g4  XMLLexer.interp  XMLLexer.java  XMLLexer.tokens  XMLParser.g4  agent.py  baseagent.py  basechannel.py  build.sh  bye.txt  channel.py  cleanup_services.sh  debug.py  docker-compose.yml  environment.py  execution_plan.py  helpers.py  holon.py  install.sh  listener.py  (+8 more)
docker/: Dockerfile
docker/content/: file.txt
examples/agent_definitions/: api_docker_example.ad  api_kubernetes_example.ad  bla0.ad  bla_file_file.ad  bla_file_http.ad  bla_file_nc.ad  bla_file_stdout.ad  (+27 more)
scripts/: test_grammar_parser.py  test_json_parse.py  text_xml_parse.py
src/: main.py
test/: APi-test.api  api_docker_example.ad  args.api  basic.api  bla0.ad  bla_file_http.ad  bla_file_stdout.ad  bla_file_ws.ad  bla_http.ad  bla_http_http.ad  bla_http_nc.ad  bla_http_stdout.ad  bla_nc.ad  bla_nc_file.ad  bla_nc_nc.ad  bla_nc_stdout.ad  bla_nc_ws.ad  bla_stdin_file.ad  bla_stdin_stderr.ad  bla_stdin_stdout.ad  bla_ws.ad  bla_ws_http.ad  channel.api  echo_server.py  echo_shell.sh  env.api  env_forward.api  holon_2.api  holonko1.cfg  input_test.txt  json_input.api  json_input_test.txt  output_test.txt  regex_input.api  sequential_execution.api  spec.api  stdin.api  stdin_ws_server_3682.py  stdout_server.py  ws_echo_server.py  (+3 more)
(+46 files in other folders)
